# mircmd-chemistry-plugins

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cursor/rules/: common.mdc  style-guide.mdc
cartesian-editor/: Cargo.toml  Makefile  README.md  manifest.yaml  package-lock.json  package.json
cartesian-editor/src/: lib.rs  periodic_table.ts  plugin.ts  program_context.ts  style.css  types.ts
chemistry-cartesian-editor/: Cargo.toml  README.md
chemistry-files-importer/: Cargo.toml  README.md  manifest.yaml
chemistry-files-importer/src/: lib.rs  parsers.rs  utils.rs
chemistry-files-importer/src/parsers/: cfour.rs  cube.rs  mdlmol2000.rs  unex.rs  xyz.rs
files-importer/: Cargo.toml  Makefile  README.md  manifest.yaml
files-importer/src/: lib.rs
files-importer/src/parsers/: cfour.rs  cube.rs  mdlmol2000.rs  unex.rs  xyz.rs
files-importer/wit/: world.wit
molecular-visualizer/: .gitignore  Cargo.toml  Makefile  README.md  manifest.yaml
molecular-visualizer/.cargo/: config.toml
molecular-visualizer/src/: atom.rs  bond.rs  bonds.rs  config.rs  core.rs  isosurface.rs  lib.rs  molecule.rs  renderer.rs  scene.rs  types.rs  utils.rs  vertex_buffer.rs  vertex_buffer_object.rs  visualizer.rs  volume_cube.rs
molecular-visualizer/src/core/: camera.rs  char_instance_data.rs  font_atlas.rs  instance_data.rs  math.rs  mesh.rs  mesh_objects.rs  node.rs  projection.rs  scene.rs  transform.rs
molecular-visualizer/src/core/math/: matrix.rs  projection.rs  vector.rs
molecular-visualizer/src/core/mesh_objects/: cube.rs  marching_cubes.rs  rect.rs
molecular-visualizer/src/math/: matrix.rs  quaternion.rs  vector.rs
molecular-visualizer/src/shaders/: main.wgsl  text.wgsl  triangle.wgsl  wboit.wgsl
molecular-visualizer/web/: package-lock.json  package.json  tsconfig.json
molecular-visualizer/web/src/: plugin.ts  program_context.ts
molecular-visualizer/wit/: world.wit
object-icons/: Makefile  README.md  manifest.yaml  plugin.js
shared_lib/: Cargo.toml
shared_lib/src/: lib.rs  periodic_table.rs  types.rs
