[package]
name = "chemistry-cartesian-editor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.51.0"
serde = { workspace = true }
serde_json = { workspace = true }
shared_lib = { workspace = true }

[profile.release]
opt-level = "s"
lto = true

[package.metadata.component]
package = "mircmd:plugin"

[package.metadata.component.target]
path = "wit"
world = "plugin"

[package.metadata.component.target.dependencies]
"mircmd:api" = { path = "wit/deps/mircmd-api" }
