[package]
name = "plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.51.0"
wit-bindgen-rt = "0.44.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.2"

[package.metadata.component]
package = "mircmd:plugin"

[package.metadata.component.target]
path = "wit"
world = "plugin"

[package.metadata.component.target.dependencies]
"mircmd:api" = { path = "wit/deps/mircmd-api" }
