[package]
name = "molecular-visualizer"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# serde = { workspace = true }
# serde_json = { workspace = true }
# shared_lib = { workspace = true }
# bytemuck = { version = "1.23.2", features = ["derive"] }
# log = "0.4.28"
wasm-bindgen = "0.2.108"
# wasm-bindgen-futures = "0.4.58"
# wgpu = { version = "28.0.0", features = ["webgl"] }
web-sys = { version = "0.3.85", features = [
    # "Document",
    # "Window",
    # "Element",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
] }

[profile.release]
opt-level = "s"
lto = true
