[package]
name = "molecular-visualizer"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
shared_lib = { workspace = true }
bytemuck = { version = "1.21", features = ["derive"] }
num-traits = "0.2.19"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement"] }
wgpu = "28.0.0"
flume = "0.12.0"

[profile.release]
opt-level = "s"
lto = true
